--- a/modpacks/news.html
+++ b/modpacks/news.html
@@ -4,8 +4,8 @@
 <title>News Page</title>
 <style>
 body {
-    background: #ffffff no-repeat;
-    color: #000000;
+    background: ##181818 no-repeat;
+    color: #FFFFFF;
     font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 20px;
